// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/LogoPresenter dangerously sets inner HTML 1`] = `
<div
  aria-label={undefined}
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={
    Object {
      "__html": "hi",
    }
  }
  href={undefined}
  onClick={undefined}
  title={undefined}
/>
`;

exports[`top-nav/presenters/LogoPresenter renders as a link when a link is provided 1`] = `
<a
  aria-label={undefined}
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={undefined}
  href="https://autodesk.com"
  onClick={undefined}
  title={undefined}
/>
`;

exports[`top-nav/presenters/LogoPresenter renders attributes for a11y 1`] = `
<div
  aria-label="a11y label"
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={undefined}
  href={undefined}
  onClick={undefined}
  title="a11y title"
/>
`;

exports[`top-nav/presenters/LogoPresenter renders children that are strings with semantic markup 1`] = `
<div
  aria-label={undefined}
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={undefined}
  href={undefined}
  onClick={undefined}
  title={undefined}
>
  <h1
    className="hig__top-nav__logo-text"
  >
    Autodesk HIG
  </h1>
</div>
`;

exports[`top-nav/presenters/LogoPresenter renders with child components 1`] = `
<div
  aria-label={undefined}
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={undefined}
  href={undefined}
  onClick={undefined}
  title={undefined}
>
  <span
    data-test="child-component"
  />
</div>
`;

exports[`top-nav/presenters/LogoPresenter renders without props 1`] = `
<div
  aria-label={undefined}
  className="hig__top-nav__logo"
  dangerouslySetInnerHTML={undefined}
  href={undefined}
  onClick={undefined}
  title={undefined}
/>
`;
